3_tier_vpc/cdk.out/vpc-stack.template.json
{
 "Description": "My VPC",
 "Resources": {
  "vpcstack9850254B": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "myVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Resource"
   }
  },
  "vpcstackPublicSubnet1Subnet0E5E4AB3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcstack9850254B"
    },
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public-"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "myVpc-public-us-east-1a"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Public-Subnet1/Subnet"
   }
  },
  "vpcstackPublicSubnet1RouteTableCE456516": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcstack9850254B"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "myVpc-public-us-east-1a"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Public-Subnet1/RouteTable"
   }
  },
  "vpcstackPublicSubnet1RouteTableAssociation08758EEE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcstackPublicSubnet1RouteTableCE456516"
    },
    "SubnetId": {
     "Ref": "vpcstackPublicSubnet1Subnet0E5E4AB3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Public-Subnet1/RouteTableAssociation"
   }
  },
  "vpcstackPublicSubnet1DefaultRoute2CF52754": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcstackPublicSubnet1RouteTableCE456516"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcstackIGW395AA3AF"
    }
   },
   "DependsOn": [
    "vpcstackVPCGW539305B9"
   ],
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Public-Subnet1/DefaultRoute"
   }
  },
  "vpcstackPublicSubnet1EIP6FE92291": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "myVpc-public-us-east-1a"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Public-Subnet1/EIP"
   }
  },
  "vpcstackPublicSubnet1NATGatewayF490612C": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "vpcstackPublicSubnet1Subnet0E5E4AB3"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "vpcstackPublicSubnet1EIP6FE92291",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "myVpc-public-us-east-1a"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Public-Subnet1/NATGateway"
   }
  },
  "vpcstackPublicSubnet2Subnet81EA6BF1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcstack9850254B"
    },
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public-"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "myVpc-public-us-east-1b"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Public-Subnet2/Subnet"
   }
  },
  "vpcstackPublicSubnet2RouteTableECC26869": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcstack9850254B"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "myVpc-public-us-east-1b"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Public-Subnet2/RouteTable"
   }
  },
  "vpcstackPublicSubnet2RouteTableAssociationD43D2AE0": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcstackPublicSubnet2RouteTableECC26869"
    },
    "SubnetId": {
     "Ref": "vpcstackPublicSubnet2Subnet81EA6BF1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Public-Subnet2/RouteTableAssociation"
   }
  },
  "vpcstackPublicSubnet2DefaultRoute200ECC8F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcstackPublicSubnet2RouteTableECC26869"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcstackIGW395AA3AF"
    }
   },
   "DependsOn": [
    "vpcstackVPCGW539305B9"
   ],
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Public-Subnet2/DefaultRoute"
   }
  },
  "vpcstackPrivateSubnet1Subnet45CB5B83": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcstack9850254B"
    },
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private-"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "myVpc-private-us-east-1a"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Private-Subnet1/Subnet"
   }
  },
  "vpcstackPrivateSubnet1RouteTableA67B3B8D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcstack9850254B"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "myVpc-private-us-east-1a"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Private-Subnet1/RouteTable"
   }
  },
  "vpcstackPrivateSubnet1RouteTableAssociation73AD44DD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcstackPrivateSubnet1RouteTableA67B3B8D"
    },
    "SubnetId": {
     "Ref": "vpcstackPrivateSubnet1Subnet45CB5B83"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Private-Subnet1/RouteTableAssociation"
   }
  },
  "vpcstackPrivateSubnet1DefaultRouteFF2381FA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcstackPrivateSubnet1RouteTableA67B3B8D"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpcstackPublicSubnet1NATGatewayF490612C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Private-Subnet1/DefaultRoute"
   }
  },
  "vpcstackPrivateSubnet2SubnetA7375EA6": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcstack9850254B"
    },
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private-"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "myVpc-private-us-east-1b"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Private-Subnet2/Subnet"
   }
  },
  "vpcstackPrivateSubnet2RouteTable5EA5EE35": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcstack9850254B"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "myVpc-private-us-east-1b"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Private-Subnet2/RouteTable"
   }
  },
  "vpcstackPrivateSubnet2RouteTableAssociation735DEE9F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcstackPrivateSubnet2RouteTable5EA5EE35"
    },
    "SubnetId": {
     "Ref": "vpcstackPrivateSubnet2SubnetA7375EA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Private-Subnet2/RouteTableAssociation"
   }
  },
  "vpcstackPrivateSubnet2DefaultRouteDCA6871F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcstackPrivateSubnet2RouteTable5EA5EE35"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpcstackPublicSubnet1NATGatewayF490612C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Private-Subnet2/DefaultRoute"
   }
  },
  "vpcstackIsolatedSubnet1Subnet79FB5EEA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcstack9850254B"
    },
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated-"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "myVpc-isolated-us-east-1a"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Isolated-Subnet1/Subnet"
   }
  },
  "vpcstackIsolatedSubnet1RouteTableA9791A24": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcstack9850254B"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "myVpc-isolated-us-east-1a"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Isolated-Subnet1/RouteTable"
   }
  },
  "vpcstackIsolatedSubnet1RouteTableAssociation73B17743": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcstackIsolatedSubnet1RouteTableA9791A24"
    },
    "SubnetId": {
     "Ref": "vpcstackIsolatedSubnet1Subnet79FB5EEA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Isolated-Subnet1/RouteTableAssociation"
   }
  },
  "vpcstackIsolatedSubnet2Subnet844DBFB6": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcstack9850254B"
    },
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated-"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "myVpc-isolated-us-east-1b"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Isolated-Subnet2/Subnet"
   }
  },
  "vpcstackIsolatedSubnet2RouteTable866C7733": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcstack9850254B"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "myVpc-isolated-us-east-1b"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Isolated-Subnet2/RouteTable"
   }
  },
  "vpcstackIsolatedSubnet2RouteTableAssociation3BB2A547": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcstackIsolatedSubnet2RouteTable866C7733"
    },
    "SubnetId": {
     "Ref": "vpcstackIsolatedSubnet2Subnet844DBFB6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/Isolated-Subnet2/RouteTableAssociation"
   }
  },
  "vpcstackIGW395AA3AF": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "myVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/IGW"
   }
  },
  "vpcstackVPCGW539305B9": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "vpcstack9850254B"
    },
    "InternetGatewayId": {
     "Ref": "vpcstackIGW395AA3AF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/vpc-stack/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WOwQ6CMBBEv4V7qRE8eCXEGC7agOFqSl1DBVrSbiWE8O+CoJz27ctkMgENDzTweGd98aj8WhZ0yJCLikzqDiKgQ94KEj9VzmLCXFFLkblCAc5uo1Q7hBsvatj85iJrtZAcpVb/8AynhM3nwvHMETreE2bke8KtOFEIZuJfYFmyfhFOU8sGFI4kBaudEd/eq8PWLbtWOxLWY6nVLqRHug+9l5XSN06hbICmy/0AXa8y+wwBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "vpc-stack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Value": {
    "Ref": "vpcstack9850254B"
   },
   "Export": {
    "Name": "VpcId"
   }
  },
  "IsolatedSubnetuseast1a": {
   "Value": {
    "Ref": "vpcstackIsolatedSubnet1Subnet79FB5EEA"
   },
   "Export": {
    "Name": "IsolatedSubnet-us-east-1a"
   }
  },
  "IsolatedSubnetuseast1b": {
   "Value": {
    "Ref": "vpcstackIsolatedSubnet2Subnet844DBFB6"
   },
   "Export": {
    "Name": "IsolatedSubnet-us-east-1b"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
